--- a/src/index.css
+++ b/src/index.css
@@ -45,7 +45,7 @@ nav p{
 .form-container{
   width: 90vw;
   height: auto;
-  margin-top: 90px;
+  margin-top: 20vh;
   display: flex;
   flex-direction: column;
   gap: 20px;
@@ -76,5 +76,9 @@ input{
   color: white;
   font-size: larger;
   font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+}
+.img--onscreen{
+  width: 80vw;
+  align-self: center;
 }
 
