adding the star feature if you like a meme you can give gold star and if you dont like the meme you can give white img

--- a/src/index.css
+++ b/src/index.css
@@ -98,3 +98,13 @@ input{
     -6px -6px 15px rgb(0, 0, 0);
    
 }
+.imcon{
+  display: flex;
+  position: relative;
+}
+.imstar{
+ height: 10px;
+ position: absolute;
+ left: 10px;
+ bottom: 10px;
+}
