--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,7 @@ nav{
   height: 80px;
   width: 100%;
  background: linear-gradient(90deg, #4b0082, #800080);
-
+  z-index: 1;
   display: flex;
 }
 nav img{
@@ -101,12 +101,38 @@ input{
 .imcon{
   display: flex;
   position: relative;
+  align-self: center;
 }
 .imstar{
- height: 10px;
+ height: 20px;
  position: absolute;
  left: 10px;
  bottom: 10px;
  cursor: pointer;
    mix-blend-mode: multiply;
+}
+.box{
+  height: 90px;
+  width: 90px;
+  border: 1px solid black;
+
+  margin: 10px;
+  color: black;
+  font-size: 20px;
+ 
+    display: inline-block;
+    text-align: center;
+    padding: 10px;
+    border-radius: 10px;
+    
+}
+.container{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  height: auto;
+  border: 3px solid rgba(0, 0, 0, 0.279);
+  width: 90vw;
+  margin-left: 4vw;
+  border-radius: 20px;
 }
